# EdsLiteNova

./: .gitignore  Directory.Build.props  EdsLite.sln  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
docs/: BUILD-AND-VERIFY.md  BUILDING.md  HANDOFF-REPORT.md  PHASE-A-REPORT.md  PHASE-B-REPORT.md  PHASE-C-START-REPORT.md  PHASE-D-REPORT.md  PHASE-E-REPORT.md  PHASE-F-REPORT.md  PHASE-F2-AVALONIA-REPORT.md  PHASE-G-REPORT.md  PHASE-K1-REPORT.md  ROADMAP.md
native/: CMakeLists.txt
native/include/: edscrypto.h
native/src/: edscrypto.c
native/tests/: kat_test.c
scripts/: build-native.ps1  build-native.sh
src/Eds.ConsoleHost/: Eds.ConsoleHost.csproj  Program.cs
src/Eds.Core/: Eds.Core.csproj
src/Eds.Core.Containers/: ContainerCreator.cs  ContainerFormatInfo.cs  ContainerOpenOptions.cs  Eds.Core.Containers.csproj  EdsContainer.cs  EncryptionEnginesRegistry.cs  IVolumeLayout.cs  Keyfiles.cs  LuksLayout.cs  StdLayout.cs  VeraCryptLayout.cs  VolumeLayoutBase.cs
src/Eds.Core.Containers/App/: EdsAppController.cs
src/Eds.Core.Containers/Locations/: ContainerLocation.cs  ContainerLocationFactory.cs
src/Eds.Core/App/: ImageMetadataReader.cs
src/Eds.Core/Crypto/: Af.cs  BufferedEncryptedFile.cs  (+9 more)
src/Eds.Maui/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Eds.Maui.csproj  MauiProgram.cs
tests/Eds.Core.Tests/: AppControllerTests.cs  BufferedEncryptedFileTests.cs  ContainerCreatorTests.cs  ContainerFormatTests.cs  CryptoKatTests.cs  Eds.Core.Tests.csproj  EncFsCipherTests.cs  EncFsConfigTests.cs  EncFsIntegrationTests.cs  EncFsLeafTests.cs  EncFsRealInteropTests.cs  EncFsVolumeKeyTests.cs  FatReadTests.cs  FatVfsTests.cs  FatWriteTests.cs  FileListerTests.cs  LocationsTests.cs  LuksRealInteropTests.cs  MacFileTests.cs  PhaseACryptoTests.cs  PhaseBFsTests.cs  SecureInputTests.cs  ServicesTests.cs  SettingsTests.cs  WrappersTests.cs
tests/interop-verification/: README.md  b64_mirror.py  edsnative.py  encfs_mirror.py  luks_mirror.py  verify_interop.py
(+116 files in other folders)
